# init-python-package

./: .gitignore  .pre-commit-config.yaml  LICENSE  README-Default.md  README.md  pyproject.toml  requirements.txt  setup_env.bat
demo_pkg2/: .gitignore  LICENSE  pyproject.toml  setup_env.sh
demo_pkg2/demo_pkg2/: __init__.py
demo_pkg2/demo_pkg2/tools/: diagnostics.py
demo_pkg2/notebooks/: example_notebook.py
demo_pkg2/tests/: test_main.py
init_python_package/: __init__.py  main - Copy.py.bak  main.py
init_python_package/demopkg02/: README.md  pyproject.toml  requirements.txt
init_python_package/demopkg02/demopkg02/: __init__.py
init_python_package/demopkg02/demopkg02/tools/: check_apache_header.py  lint.sh
init_python_package/demopkg02/tests/: test_main.py
init_python_package/import os/: .pre-commit-config.yaml  LICENSE
init_python_package/import os/import os/: __init__.py  main.py
init_python_package/import os/scripts/: example_script.py
init_python_package/import os/tests/: test_main.py
init_python_package/import os/tools/: check_apache_header.py  diagnostics.py  license_config.json
init_python_package/tools/: __init__.py  check_apache_header.py  headers.py  license_gen.py  metadata.py  pyproject_gen.py  readme_gen.py  readme_gen_for_init_py_pkg.py  tools.py
tests/: test_main.py
tools/: license_config.json  metadata.py  readme_template.py  scaffold.py  tools.py
