[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "init_python_package"
version = "0.1.0"
description = "A Python package scaffold"
authors = [{ name = "George Cutter" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
license = { text = "Apache-2.0" }

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = ["pytest", "flake8"]

[project.scripts]
#init-python-package = "init_python_package.main:run_initializer"
# 
init-python-package = "init_python_package.main:cli"